Complete Work With Core Layer And Add Tables To Database And Complete Generic Repository

--- a/Foodyz.API/Foodyz.API.csproj
+++ b/Foodyz.API/Foodyz.API.csproj
@@ -8,6 +8,21 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="8.1.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="8.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Foodyz.Application\Foodyz.Application.csproj" />
+    <ProjectReference Include="..\Foodyz.Infrastructure\Foodyz.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
